--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -41,7 +41,8 @@
     // See comments in lib/Views/global.scss for further information about customising colors, logos, fonts etc.
     "brandBarElements": [
       "",
-      "<a target=\"_blank\" href=\"https://terria.io\"><img src=\"images/terria_logo.png\" height=\"52\" title=\"Version: {{version}}\" /></a>",
+      "<a target=\"_blank\" href=\"https://www.nsw.gov.au/nsw-telco-authority\"><img src=\"images/nsw-logo-desk.svg\" height=\"52\" title=\"Version: {{version}}\" /></a>",
+      "<span id=\"site-title\" style=\"padding: 17px 25px; background: white; color: rgb(17, 71, 132); font-size: 14px;\">NSW Telco Slim JIMS</span>",
       ""
     ],
     // Shown when things go wrong.
